fixing stretched image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,8 @@ body {
     background: url("/assets/images/nature.jpg") no-repeat center fixed;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 1.75rem;
